# sentinel

./: README.md  pyproject.toml
notebooks/: Sentinel2-tutorial.ipynb
