[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
rasterio = "^1.1.6"
numpy = "^1.19.2"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
